--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 html, body {
     height: 100vh;
     padding: 0;
     margin: 0;
+    background-color: #202441;
+    font-family: 'Roboto', sans-serif;
+    color: white;
 }
 
 section{
@@ -13,7 +19,7 @@ section{
 
 .counterFrame{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
 }
@@ -24,4 +30,32 @@ section{
    align-items: center;
    justify-content: center;
    width: 25vw;
+   height: 40vh;
+   text-align: center;
+}
+
+.counterFrame .buttonFrames{
+}
+
+section button{
+    background-color: #fe3b77;
+    border: none;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.placeBet{
+    margin-bottom: 30px;
+    background-color: #4289f3;
+    border:none;
+    border-radius: 5px;
+    color: white;
+}
+
+.placeBet:hover{
+    background-color: #2b6cce;
+}
+
+section button:hover{
+    background-color: #de235b;
 }
