--- a/style.css
+++ b/style.css
@@ -1,61 +1,153 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
 html, body {
     height: 100vh;
     padding: 0;
     margin: 0;
-    background-color: #202441;
-    font-family: 'Roboto', sans-serif;
-    color: white;
+    background-color: #eae3d1;
+    font-family: 'MuseoModerno', cursive;
+    color: rgb(19, 19, 19);
+    cursor: none;
+
 }
 
-section{
+h1, h2, h3, h4, h5{
+    font-weight: 200;
+}
+
+
+header{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
+    margin: 50px;
 }
 
-.counterFrame{
+#gameFrames{
     display: flex;
-    justify-content: space-evenly;
+    flex-direction: column;
+   padding:  20px;
     align-items: center;
-    flex-wrap: wrap;
+    border-bottom:1px solid black;
+    border-top: 1px solid black;
 }
 
-.counterFrame div{
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   justify-content: center;
-   width: 25vw;
-   height: 40vh;
-   text-align: center;
-}
-
-.counterFrame .buttonFrames{
-}
-
-section button{
-    background-color: #fe3b77;
+#gameFrames button{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
-    padding: 20px;
+    background-color: transparent;
+    cursor: none;
+}
+
+#gameFrames button:last-child{
+  border: 2px solid black;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  transition: 500ms ease-in-out;
+  color:white;
+}
+
+#gameFrames button:last-child:hover{
+    background-color:#282b2d;
+    transition: 500ms ease-in-out;
+    color: rgb(167, 167, 167);
+}
+
+.cursor{
+	position: absolute;
+	background: #d75c3a;
+	width: 8px;
+	height: 8px;
+	border-radius: 100%;
+	transition: 0.5s cubic-bezier(0.75,-1.27,0.3,2.33) transform, 0.2s cubic-bezier(0.75,-1.27,0.3,2.33) opacity;
+	user-select: none;
+	pointer-events: none;
+	transform: scale(0.8);
+	  z-index: 200;
+}
+
+.cursor::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    background-image: url("http://mirkozeppieri.emanuelepapale.com/wp-content/uploads/2018/07/project-hover-cursor.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 100%;
+    opacity: 0;
+}
+
+.cursor.active {
+    opacity: 1;
+    transform: scale(12);
+}
+
+.cursor.active::before {
+    opacity: 1;
+}
+
+.cursor-follower {
+    position: absolute;
+    background: transparent;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    z-index: 200;
+    transition: 0.6s cubic-bezier(0.75, -1.27, 0.3, 2.33) transform,
+        0.4s cubic-bezier(0.75, -1.27, 0.3, 2.33) opacity;
+    user-select: none;
+    pointer-events: none;
+    transform: translate(4px, 4px);
+    border: 1px solid black;
+}
+
+.cursor-follower.active {
+    opacity: 0.3;
+    transform: scale(0);
+}
+
+.nextRound {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+}
+
+.nextRoundButton{
+    background-color: black;
+    color:white;
+    border: none;
     border-radius: 5px;
+    transition: 500ms ease-in-out;
 }
 
-.placeBet{
-    margin-bottom: 30px;
-    background-color: #4289f3;
-    border:none;
-    border-radius: 5px;
-    color: white;
+.nextRoundButton:hover{
+    background-color:#282b2d;
+    transition: 500ms ease-in-out;
+    color: rgb(215, 215, 215);
 }
 
-.placeBet:hover{
-    background-color: #2b6cce;
+.rules{
+    padding: 90px;
+    display: flex;
+    justify-content:space-evenly;
 }
 
-section button:hover{
-    background-color: #de235b;
+#rulesFrame{
+    margin-top: 80px;
 }
+
